test/valid_samples/separate_compilation/main.mc
void main() {
    int a = foo();
}