test/semantic_errors/invalid_assignment1.mc
void main() {
    int a;
    a = true; /* cannot assign bool constant to int */
}